manifests/wego-app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wego-app
  name: wego-app-development
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wego-app
    spec:
      serviceAccountName: wego-app-service-account
      containers:
        - name: wego-app
          image: ${modules["wego-app-image"].outputs.deployment-image-id}
          args: ["ui","run"]
          ports:
            - containerPort: 9001
          imagePullPolicy: Always
  selector:
    matchLabels:
      app: wego-app
